# ticket_guy_b_team

./: .gitignore  AGENTS.md  LICENSE  README.md  build_backend.py  pyproject.toml  ticket_guy_b_team.code-workspace  ticket_guys_b_team.code-workspace
.codex/: config.toml
artifacts/plans/: cli-で仕様レビュー駆動の作業を整理したい-20260318212701.md  worker-の-review-queue-を確認したい-20260318212701.md  成果物の存在確認をしたい-20260318212701.md  未完成の-plan-を弾きたい-20260318212701.md
doc/: cli_contract.md  codex_cli_wrapper.md  file_format.md  product_vision.md  spec.md  spec_overview.md  state_machine.md
src/: main.py  typer.py
src/langgraph/: __init__.py  graph.py
tests/: test_main.py  test_smoke_production.py
