[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "ticket-guy-b-team"
version = "0.1.0"
description = "CLI frontend for spec-review-driven multi-agent development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.2",
]

[project.scripts]
ticketguy = "main:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.397",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
